--- a/crystal_client_templates/configuration.mustache
+++ b/crystal_client_templates/configuration.mustache
@@ -276,6 +276,9 @@ module {{moduleName}}
                 {{/-last}}
                 {{/enumValues}}
               },
+          {{#-last}}
+            }
+          {{/-last}}
           {{/variables}}
         },
       {{/servers}}
