--- a/crystal_client_templates/partial_model_generic.mustache
+++ b/crystal_client_templates/partial_model_generic.mustache
@@ -13,8 +13,8 @@
     {{#description}}
     # {{{.}}}
     {{/description}}
-    @[JSON::Field(key: "{{{baseName}}}", type: {{{dataType}}}{{#isNullable}}{{^anyOf}}?{{/anyOf}}{{/isNullable}}{{^isNullable}}{{#anyOf}}?{{/anyOf}}{{/isNullable}}{{#isDate}}, converter: Time::ISO8601DateConverter{{/isDate}}{{#isDateTime}}, converter: Time::RFC3339Converter{{/isDateTime}}{{#defaultValue}}, default: {{{defaultValue}}}{{/defaultValue}}{{#isNullable}}, presence: true, ignore_serialize: {{{name}}}.nil? && !{{{name}}}_present?{{/isNullable}})]
-    {{#isEnum}}getter{{/isEnum}}{{^isEnum}}{{#hasValidation}}getter{{/hasValidation}}{{^hasValidation}}property{{/hasValidation}}{{/isEnum}} {{{name}}} : {{{dataType}}}{{#isNullable}}{{^anyOf}}?{{/anyOf}}{{/isNullable}}{{^isNullable}}{{#anyOf}}?{{/anyOf}}{{/isNullable}}
+    @[JSON::Field(key: "{{{baseName}}}", type: {{{dataType}}}{{#isNullable}}{{^anyOf}}?{{/anyOf}}{{/isNullable}}{{^isNullable}}{{#anyOf}}{{#-first}}?{{/-first}}{{/anyOf}}{{/isNullable}}{{#isDate}}, converter: Time::ISO8601DateConverter{{/isDate}}{{#isDateTime}}, converter: Time::RFC3339Converter{{/isDateTime}}{{#defaultValue}}, default: {{{defaultValue}}}{{/defaultValue}}{{#isNullable}}, presence: true, ignore_serialize: {{{name}}}.nil? && !{{{name}}}_present?{{/isNullable}})]
+    {{#isEnum}}getter{{/isEnum}}{{^isEnum}}{{#hasValidation}}getter{{/hasValidation}}{{^hasValidation}}property{{/hasValidation}}{{/isEnum}} {{{name}}} : {{{dataType}}}{{#isNullable}}{{^anyOf}}?{{/anyOf}}{{/isNullable}}{{^isNullable}}{{#anyOf}}{{#-first}}?{{/-first}}{{/anyOf}}{{/isNullable}}
     {{#isNullable}}
 
     @[JSON::Field(ignore: true)]
@@ -81,108 +81,31 @@
     {{/discriminator}}
     # Initializes the object
     # @param [Hash] attributes Model attributes in the form of hash
-    def initialize({{#hasVars}}*, {{/hasVars}}{{#requiredVars}}@{{{name}}} : {{{dataType}}}{{#isNullable}}?{{/isNullable}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}}{{^-last}}, {{/-last}}{{/requiredVars}}{{#hasRequired}}{{#hasOptional}}, {{/hasOptional}}{{/hasRequired}}{{#optionalVars}}@{{{name}}} : {{{dataType}}}?{{^defaultValue}} = nil{{/defaultValue}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}}{{^-last}}, {{/-last}}{{/optionalVars}})
+    def initialize({{#hasVars}}*, {{/hasVars}}{{#requiredVars}}@{{{name}}} : {{{dataType}}}{{#isNullable}}{{^anyOf}}?{{/anyOf}}{{/isNullable}}{{^isNullable}}{{#anyOf}}{{#-first}}?{{/-first}}{{/anyOf}}{{/isNullable}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}}{{^-last}}, {{/-last}}{{/requiredVars}}{{#hasRequired}}{{#hasOptional}}, {{/hasOptional}}{{/hasRequired}}{{#optionalVars}}@{{{name}}} : {{{dataType}}}?{{^defaultValue}} = nil{{/defaultValue}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}}{{^-last}}, {{/-last}}{{/optionalVars}})
     end
 
     # Show invalid properties with the reasons. Usually used together with valid?
     # @return Array for valid properties with the reasons
     def list_invalid_properties
       invalid_properties = Array(String).new
-      {{#vars}}
-      {{#isEnum}}
-      {{#isContainer}}
-      invalid_properties.push({{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}}.error_message) unless {{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}}.all_valid?(@{{{name}}}{{#required}}{{^isNullable}}, false{{/isNullable}}{{/required}})
-      {{/isContainer}}
-      {{^isContainer}}
-      invalid_properties.push({{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}}.error_message) unless {{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}}.valid?(@{{{name}}}{{#required}}{{^isNullable}}, false{{/isNullable}}{{/required}})
-      {{/isContainer}}
-      {{/isEnum}}
-
-      {{#hasValidation}}
-      {{#maxLength}}
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.to_s.size > {{{maxLength}}}
-        invalid_properties.push("invalid value for \"{{{name}}}\", the character length must be smaller than or equal to {{{maxLength}}}.")
-      end
-
-      {{/maxLength}}
-      {{#minLength}}
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.to_s.size < {{{minLength}}}
-        invalid_properties.push("invalid value for \"{{{name}}}\", the character length must be great than or equal to {{{minLength}}}.")
-      end
-
-      {{/minLength}}
-      {{#maximum}}
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} >{{#exclusiveMaximum}}={{/exclusiveMaximum}} {{{maximum}}}
-        invalid_properties.push("invalid value for \"{{{name}}}\", must be smaller than {{^exclusiveMaximum}}or equal to {{/exclusiveMaximum}}{{{maximum}}}.")
-      end
-
-      {{/maximum}}
-      {{#minimum}}
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} <{{#exclusiveMinimum}}={{/exclusiveMinimum}} {{{minimum}}}
-        invalid_properties.push("invalid value for \"{{{name}}}\", must be greater than {{^exclusiveMinimum}}or equal to {{/exclusiveMinimum}}{{{minimum}}}.")
-      end
-
-      {{/minimum}}
-      {{#pattern}}
-      pattern = {{{pattern}}}
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} !~ pattern
-        invalid_properties.push("invalid value for \"{{{name}}}\", must conform to the pattern #{pattern}.")
-      end
-
-      {{/pattern}}
-      {{#maxItems}}
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.size > {{{maxItems}}}
-        invalid_properties.push("invalid value for \"{{{name}}}\", number of items must be less than or equal to {{{maxItems}}}."
-      end
-
-      {{/maxItems}}
-      {{#minItems}}
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.size < {{{minItems}}}
-        invalid_properties.push("invalid value for \"{{{name}}}\", number of items must be greater than or equal to {{{minItems}}}."
-      end
-
-      {{/minItems}}
-      {{/hasValidation}}
-      {{/vars}}
+      {{#requiredVars}}
+      {{>partial_model_list_invalid_properties}}
+      {{/requiredVars}}
+      {{#optionalVars}}
+      {{>partial_model_list_invalid_properties}}
+      {{/optionalVars}}
       invalid_properties
     end
 
     # Check to see if the all the properties in the model are valid
     # @return true if the model is valid
     def valid?
-      {{#vars}}
-      {{#isEnum}}
-      {{#isContainer}}
-      return false unless {{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}}.all_valid?(@{{{name}}}{{#required}}{{^isNullable}}, false{{/isNullable}}{{/required}})
-      {{/isContainer}}
-      {{^isContainer}}
-      return false unless {{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}}.valid?(@{{{name}}}{{#required}}{{^isNullable}}, false{{/isNullable}}{{/required}})
-      {{/isContainer}}
-      {{/isEnum}}
-      {{#hasValidation}}
-      {{#maxLength}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.to_s.size > {{{maxLength}}}
-      {{/maxLength}}
-      {{#minLength}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.to_s.size < {{{minLength}}}
-      {{/minLength}}
-      {{#maximum}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} >{{#exclusiveMaximum}}={{/exclusiveMaximum}} {{{maximum}}}
-      {{/maximum}}
-      {{#minimum}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} <{{#exclusiveMinimum}}={{/exclusiveMinimum}} {{{minimum}}}
-      {{/minimum}}
-      {{#pattern}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} !~ {{{pattern}}}
-      {{/pattern}}
-      {{#maxItems}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.size > {{{maxItems}}}
-      {{/maxItems}}
-      {{#minItems}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.size < {{{minItems}}}
-      {{/minItems}}
-      {{/hasValidation}}
-      {{/vars}}
+      {{#requiredVars}}
+      {{>partial_model_valid}}
+      {{/requiredVars}}
+      {{#optionalVars}}
+      {{>partial_model_valid}}
+      {{/optionalVars}}
       {{#anyOf}}
       {{#-first}}
       _any_of_found = false
@@ -196,98 +119,19 @@
 
         !_any_of.nil? && _any_of.not_nil!.valid?
       end
-
-      if !_any_of_found
-        return false
-      end
+      return false if !_any_of_found
 
       {{/-first}}
       {{/anyOf}}
       true
     end
 
-    {{#vars}}
-    {{#isEnum}}
-    {{#isContainer}}
-    # Custom attribute writer method checking allowed values (enum).
-    # @param [Object] {{{name}}} Object to be assigned
-    def {{{name}}}=({{{name}}})
-      {{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}}.all_valid!({{{name}}}{{#required}}{{^isNullable}}, false{{/isNullable}}{{/required}})
-      @{{{name}}} = {{{name}}}
-    end
-
-    {{/isContainer}}
-    {{^isContainer}}
-    # Custom attribute writer method checking allowed values (enum).
-    # @param [Object] {{{name}}} Object to be assigned
-    def {{{name}}}=({{{name}}})
-      {{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}}.valid!({{{name}}}{{#required}}{{^isNullable}}, false{{/isNullable}}{{/required}})
-      @{{{name}}} = {{{name}}}
-    end
-
-    {{/isContainer}}
-    {{/isEnum}}
-    {{^isEnum}}
-    {{#hasValidation}}
-    # Custom attribute writer method with validation
-    # @param [Object] {{{name}}} Value to be assigned
-    def {{{name}}}=({{{name}}})
-      {{#maxLength}}
-      if {{^required}}!{{{name}}}.nil? && {{/required}}{{{name}}}.to_s.size > {{{maxLength}}}
-        raise ArgumentError.new("invalid value for \"{{{name}}}\", the character length must be smaller than or equal to {{{maxLength}}}.")
-      end
-
-      {{/maxLength}}
-      {{#minLength}}
-      if {{^required}}!{{{name}}}.nil? && {{/required}}{{{name}}}.to_s.size < {{{minLength}}}
-        raise ArgumentError.new("invalid value for \"{{{name}}}\", the character length must be great than or equal to {{{minLength}}}.")
-      end
-
-      {{/minLength}}
-      {{#maximum}}
-      if {{^required}}!{{{name}}}.nil? && {{/required}}{{{name}}} >{{#exclusiveMaximum}}={{/exclusiveMaximum}} {{{maximum}}}
-        raise ArgumentError.new("invalid value for \"{{{name}}}\", must be smaller than {{^exclusiveMaximum}}or equal to {{/exclusiveMaximum}}{{{maximum}}}.")
-      end
-
-      {{/maximum}}
-      {{#minimum}}
-      if {{^required}}!{{{name}}}.nil? && {{/required}}{{{name}}} <{{#exclusiveMinimum}}={{/exclusiveMinimum}} {{{minimum}}}
-        raise ArgumentError.new("invalid value for \"{{{name}}}\", must be greater than {{^exclusiveMinimum}}or equal to {{/exclusiveMinimum}}{{{minimum}}}.")
-      end
-
-      {{/minimum}}
-      {{#pattern}}
-      pattern = {{{pattern}}}
-      if {{^required}}!{{{name}}}.nil? && {{/required}}{{{name}}} !~ pattern
-        raise ArgumentError.new("invalid value for \"{{{name}}}\", must conform to the pattern #{pattern}.")
-      end
-
-      {{/pattern}}
-      {{#maxItems}}
-      if {{^required}}!{{{name}}}.nil? && {{/required}}{{{name}}}.size > {{{maxItems}}}
-        raise ArgumentError.new("invalid value for \"{{{name}}}\", number of items must be less than or equal to {{{maxItems}}}.")
-      end
-
-      {{/maxItems}}
-      {{#minItems}}
-      if {{^required}}!{{{name}}}.nil? && {{/required}}{{{name}}}.size < {{{minItems}}}
-        raise ArgumentError.new("invalid value for \"{{{name}}}\", number of items must be greater than or equal to {{{minItems}}}.")
-      end
-
-      {{/minItems}}
-      @{{{name}}} = {{{name}}}
-    end
-
-    {{/hasValidation}}
-    {{/isEnum}}
-    {{/vars}}
-    # Checks equality by comparing each attribute.
-    # @param [Object] Object to be compared
-    def ==(o)
-      return true if self.same?(o)
-      self.class == o.class{{#vars}} &&
-        {{name}} == o.{{name}}{{/vars}}
-    end
+    {{#requiredVars}}
+    {{>partial_model_setter}}
+    {{/requiredVars}}
+    {{#optionalVars}}
+    {{>partial_model_setter}}
+    {{/optionalVars}}
 
     # @see the `==` method
     # @param [Object] Object to be compared
@@ -295,7 +139,9 @@
       self == o
     end
 
-    # Calculates hash code according to all attributes.
-    # @return [UInt64] Hash code
-    def_hash({{#vars}}@{{name}}{{^-last}}, {{/-last}}{{/vars}})
+    # Generates #hash and #== methods from all fields
+    # #== @return [Bool]
+    # #hash calculates hash code according to all attributes.
+    # #hash @return [UInt64] Hash code
+    def_equals_and_hash({{#requiredVars}}@{{{name}}}{{^-last}}, {{/-last}}{{/requiredVars}}{{#hasRequired}}{{#hasOptional}}, {{/hasOptional}}{{/hasRequired}}{{#optionalVars}}@{{{name}}}{{^-last}}, {{/-last}}{{/optionalVars}})
   end
