Implement enum classes

--- a/crystal_client_templates/partial_model_list_invalid_properties.mustache
+++ b/crystal_client_templates/partial_model_list_invalid_properties.mustache
@@ -53,3 +53,9 @@
       end
       {{/minItems}}
       {{/hasValidation}}
+      {{^_enum}}
+      {{#allowableValues}}
+
+      invalid_properties.push(@{{{name}}}.not_nil!.error_message) if !@{{{name}}}.nil? && !@{{{name}}}.not_nil!.valid?
+      {{/allowableValues}}
+      {{/_enum}}
