--- a/crystal_client_templates/partial_model_enum_class.mustache
+++ b/crystal_client_templates/partial_model_enum_class.mustache
@@ -1,22 +1,41 @@
-  class {{classname}}{{#allowableValues}}{{#enumVars}}
-    {{{name}}} = {{{value}}}
-  {{/enumVars}} {{/allowableValues}}
-    # Builds the enum from string
-    # @param [String] The enum value in the form of the string
-    # @return [String] The enum value
-    def self.build_from_hash(value)
-      new.build_from_hash(value)
+  class {{classname}}
+    property data : {{dataType}}
+
+    {{#lambda.uppercase}}enum_validator{{/lambda.uppercase}} = EnumValidator.new("{{{name}}}", "{{{dataType}}}", [{{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}}])
+
+    delegate to_json_object_key, to: @data
+    delegate error_message, to: {{#lambda.uppercase}}enum_validator{{/lambda.uppercase}}
+
+    def self.from_json(value : JSON::PullParser) : {{classname}}
+      new(value)
     end
 
-    # Builds the enum from string
-    # @param [String] The enum value in the form of the string
-    # @return [String] The enum value
-    def build_from_hash(value)
-      case value{{#allowableValues}}{{#enumVars}}
-      when {{{value}}}
-        {{{name}}}{{/enumVars}}{{/allowableValues}}
-      else
-        raise "Invalid ENUM value #{value} for class #{{{classname}}}"
-      end
+    def self.to_json(value : {{classname}}, json : JSON::Builder) : Nil
+      value.to_json(json)
     end
+
+    def self.new(pull : JSON::PullParser)
+      new({{dataType}}.new(pull))
+    end
+
+    def self.from_json_object_key?(key : String)
+      {{dataType}}.from_json_object_key?(key)
+    end
+
+    def initialize(@data)
+    end
+
+    def valid?
+      {{#lambda.uppercase}}enum_validator{{/lambda.uppercase}}.valid?(@data, false)
+    end
+
+    def valid!
+      {{#lambda.uppercase}}enum_validator{{/lambda.uppercase}}.valid!(@data, false)
+    end
+
+    def to_json(json : JSON::Builder) : Nil
+      @data.to_json(json)
+    end
+
+    def_equals_and_hash(@data)
   end
