Add EnumClass.new! that raises error if not valid

--- a/crystal_client_templates/partial_model_enum_class.mustache
+++ b/crystal_client_templates/partial_model_enum_class.mustache
@@ -22,7 +22,11 @@
       {{dataType}}.from_json_object_key?(key)
     end
 
-    def initialize(@data)
+    def self.new!(data : {{dataType}})
+      new(data).tap(&.valid!)
+    end
+
+    def initialize(@data : {{dataType}})
     end
 
     def valid?
